# Chalkboard

./: .gitignore  README.md  index.html  package.json  vite.config.ts
backend/: Dockerfile  fly.toml  pyproject.toml  start.sh
backend/src/: canvas_command_parser.py  canvas_processor.py  grok_client.py  grok_vision.py  main.py  session.py  types.py
docs/: Architecture.md  StyleGuide.md
src/: App.tsx  index.css
src/components/AttentionCursor/: AttentionCursor.tsx
src/components/CelebrationEffect/: CelebrationEffect.tsx
src/components/ConnectionStatus/: ConnectionStatus.tsx
src/components/GlassVoiceButton/: GlassVoiceButton.tsx  index.ts
src/components/Header/: Header.tsx
src/components/LandingPage/: LandingPage.css  LandingPage.tsx
src/components/TranscriptFeed/: TranscriptFeed.tsx
src/components/TutorCanvas/: TutorCanvas.tsx
src/components/TutorStatus/: TutorStatus.tsx
src/components/VoiceOrb/: AudioLevelRing.tsx  ProcessingDots.tsx  VoiceOrb.tsx  WaveformVisualizer.tsx
src/components/VoicePanel/: VoicePanel.tsx
src/hooks/: useMathTutor.ts  useVoice.ts  useWebSocket.ts
src/lib/: audioService.ts  canvasUtils.ts  debounce.ts  grokClient.ts  handwriting.ts  mathTutor.ts  mockWebSocket.ts  strokeAnimation.ts  wsManager.ts
src/stores/: tutorStore.ts
src/styles/: globals.css
src/types/: index.ts
